@@ -27,6 +27,8 @@ package require \fBTcl 8.5\fR
 .br
 \fB::tcl::mathfunc::atan2\fR \fIy\fR \fIx\fR
 .br
+\fB::tcl::mathfunc::bool\fR \fIarg\fR
+.br
 \fB::tcl::mathfunc::ceil\fR \fIarg\fR
 .br
 \fB::tcl::mathfunc::cos\fR \fIarg\fR
@@ -85,13 +87,13 @@ Tcl supports the following mathematical functions in expressions, all
 of which work solely with floating-point numbers unless otherwise noted:
 .DS
 .ta 3c 6c 9c
-\fBabs\fR	\fBcosh\fR	\fBlog\fR	\fBsqrt\fR
-\fBacos\fR	\fBdouble\fR	\fBlog10\fR	\fBsrand\fR
-\fBasin\fR	\fBexp\fR	\fBpow\fR	\fBtan\fR
-\fBatan\fR	\fBfloor\fR	\fBrand\fR	\fBtanh\fR
-\fBatan2\fR	\fBfmod\fR	\fBround\fR	\fBwide\fR
+\fBabs\fR      \fBcos\fR       \fBint\fR       \fBsinh\fR
+\fBacos\fR     \fBcosh\fR      \fBlog\fR       \fBsqrt\fR
+\fBasin\fR     \fBdouble\fR    \fBlog10\fR     \fBsrand\fR
+\fBatan\fR     \fBexp\fR       \fBpow\fR       \fBtan\fR
+\fBatan2\fR    \fBfloor\fR     \fBrand\fR      \fBtanh\fR
+\fBbool\fR     \fBfmod\fR      \fBround\fR     \fBwide\fR
 \fBceil\fR	\fBhypot\fR	\fBsin\fR
-\fBcos\fR	\fBint\fR	\fBsinh\fR
 .DE
 .PP
 .TP
@@ -115,6 +117,13 @@ radians.
 Returns the arc tangent of \fIy\fR/\fIx\fR, in the range [\fI-pi\fR,\fIpi\fR]
 radians.  \fIx\fR and \fIy\fR cannot both be 0.  If \fIx\fR is greater
 than \fI0\fR, this is equivalent to \fBatan(\fIy/x\fB)\fR.
+.TP
+\fBbool(\fIarg\fB)\fR
+Accepts any numerical value, or any string acceptable to
+\fBstring is boolean\fR, and returns the corresponding 
+boolean value \fB0\fR or \fB1\fR.  Non-zero numbers are true.
+Other numbers are false.  Non-numeric strings produce boolean value in
+agreement with \fBstring is true\fR and \fBstring is false\fR.
 .TP
 \fBceil(\fIarg\fB)\fR
 Returns the smallest integral floating-point value (i.e. with a zero
